Movie-Booking-System-Microservices/k8s/ingress/movie-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-app-ingress
  namespace: movie-app
spec:
  ingressClassName: nginx
  rules:
    - host: movieapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: match-frontend
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
          - path: /matches
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
          - path: /sessions
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
          - path: /bookings
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8085
